Simple refactoring